parallel ADF query execution: further semantics and fixed memory leak